examples/avm-res-web-site/0.22.0/submodules/certificate/README.md
<!-- BEGIN_TF_DOCS -->
<!-- Code generated by terraform-docs. DO NOT EDIT. -->
# certificate submodule

This submodule manages an App Service certificate
(`Microsoft.Web/certificates`). The certificate can either be sourced from
Azure Key Vault (recommended, supports auto-renewal) or uploaded inline as
a base64-encoded PFX blob.

The resulting `thumbprint` output is intended to be fed into the parent
module's `custom_domains[*].thumbprint` (or
`deployment_slots[*].custom_domains[*].thumbprint`) so the same plan can
provision the certificate **and** bind a hostname to it over SNI.

## Key Vault prerequisites

When sourcing the certificate from Key Vault, the well-known App Service
first-party service principal
**`abfa0a7c-a6b6-4736-8310-5855508787cd`** ("Microsoft Azure App Service")
must have read access to the certificate secret:

- For RBAC-enabled vaults: assign the **Key Vault Certificate User** role
  (`db79e9a7-68ee-4b58-9aeb-b90e7c24fcba`) on the vault scope.
- For access-policy-based vaults: grant `get` on `secrets` and
  `certificates`.

If the grant is missing the resource will deploy but
`key_vault_secret_status` will report the failure (e.g.
`KeyVaultSecretDoesNotExist`, `AccessDenied`).

<!-- markdownlint-disable MD033 -->
## Requirements

The following requirements are needed by this module:

- <a name="requirement_terraform"></a> [terraform](#requirement\_terraform) (~> 1.9)

- <a name="requirement_azapi"></a> [azapi](#requirement\_azapi) (~> 2.9)

## Resources

The following resources are used by this module:

- [azapi_resource.this](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/resource) (resource)

<!-- markdownlint-disable MD013 -->
## Required Inputs

The following input variables are required:

### <a name="input_location"></a> [location](#input\_location)

Description: The Azure region where the certificate resource will be created. Should match the App Service Plan.

Type: `string`

### <a name="input_name"></a> [name](#input\_name)

Description: The name of the App Service certificate.

Type: `string`

### <a name="input_parent_id"></a> [parent\_id](#input\_parent\_id)

Description: The resource ID of the parent resource group.

Type: `string`

### <a name="input_server_farm_id"></a> [server\_farm\_id](#input\_server\_farm\_id)

Description: The resource ID of the App Service Plan that will host sites using this certificate. Required by Azure when sourcing the certificate from Key Vault.

Type: `string`

## Optional Inputs

The following input variables are optional (have default values):

### <a name="input_host_names"></a> [host\_names](#input\_host\_names)

Description: (Optional) The host names the certificate applies to. If omitted, Azure derives them from the certificate's subject alternative names.

Type: `list(string)`

Default: `null`

### <a name="input_key_vault_id"></a> [key\_vault\_id](#input\_key\_vault\_id)

Description: (Optional) The resource ID of the Key Vault that contains the certificate.

Either both `key_vault_id` and `key_vault_secret_name` must be supplied to  
source the certificate from Key Vault, or `pfx_blob` (and optionally
`password`) must be supplied to upload an inline PFX. The two modes are  
mutually exclusive.

Type: `string`

Default: `null`

### <a name="input_key_vault_secret_name"></a> [key\_vault\_secret\_name](#input\_key\_vault\_secret\_name)

Description: (Optional) The name of the Key Vault secret/certificate that contains the PFX. Required when `key_vault_id` is set.

Type: `string`

Default: `null`

### <a name="input_password"></a> [password](#input\_password)

Description: (Optional) The password protecting the PFX supplied via `pfx_blob`.

Type: `string`

Default: `null`

### <a name="input_pfx_blob"></a> [pfx\_blob](#input\_pfx\_blob)

Description: (Optional) The base64-encoded contents of the PFX file. Mutually exclusive with `key_vault_id`.

Type: `string`

Default: `null`

### <a name="input_retry"></a> [retry](#input\_retry)

Description: (Optional) Retry configuration for the underlying azapi resource.

Type:

```hcl
object({
    error_message_regex = list(string)
    interval_seconds    = optional(number, 10)
    max_retries         = optional(number, 3)
  })
```

Default: `null`

### <a name="input_tags"></a> [tags](#input\_tags)

Description: (Optional) Tags applied to the certificate resource.

Type: `map(string)`

Default: `null`

## Outputs

The following outputs are exported:

### <a name="output_expiration_date"></a> [expiration\_date](#output\_expiration\_date)

Description: The certificate's expiration date.

### <a name="output_issuer"></a> [issuer](#output\_issuer)

Description: The certificate issuer.

### <a name="output_key_vault_secret_status"></a> [key\_vault\_secret\_status](#output\_key\_vault\_secret\_status)

Description: The status of the Key Vault secret poll. Useful for diagnosing missing RBAC grants.

### <a name="output_name"></a> [name](#output\_name)

Description: The name of the certificate.

### <a name="output_resource"></a> [resource](#output\_resource)

Description: The full resource object.

### <a name="output_resource_id"></a> [resource\_id](#output\_resource\_id)

Description: The resource ID of the certificate.

### <a name="output_subject_name"></a> [subject\_name](#output\_subject\_name)

Description: The certificate subject name.

### <a name="output_thumbprint"></a> [thumbprint](#output\_thumbprint)

Description: The thumbprint of the certificate. Pass this value into `custom_domains[*].thumbprint` to bind the certificate to a hostname.

## Modules

No modules.

<!-- markdownlint-disable-next-line MD041 -->
## Data Collection

The software may collect information about you and your use of the software and send it to Microsoft. Microsoft may use this information to provide services and improve our products and services. You may turn off the telemetry as described in the repository. There are also some features in the software that may enable you and Microsoft to collect data from users of your applications. If you use these features, you must comply with applicable law, including providing appropriate notices to users of your applications together with a copy of Microsoft's privacy statement. Our privacy statement is located at <https://go.microsoft.com/fwlink/?LinkID=824704>. You can learn more about data collection and use in the help documentation and our privacy statement. Your use of the software operates as your consent to these practices.
<!-- END_TF_DOCS -->
